--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
         <h1>Welcome to My Portfolio</h1>
     </header>
     <section>
-        <h2>Power BI Projects</h2>
-        <p>Showcase your dashboards, screenshots, and project descriptions here.</p>
-        <!-- Add images, links, and descriptions -->
+      <h2>Power BI Projects</h2>
+<p>Showcase your dashboards, screenshots, and project descriptions here.</p>
+<!-- Add image -->
+<img src="images/dashboard.png" alt="Screenshot of Power BI Dashboard" style="max-width:100%; height:auto;">
     </section>
     <footer>
-        <p>Contact: your.email@example.com</p>
+        <p>Contact: o.sanda1313@gmail.com</p>
     </footer>
 </body>
 </html>
