--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section>
       <h2>Power BI Projects</h2>
 <p>Showcase your dashboards, screenshots, and project descriptions here.</p>
-<!-- Add image -->
+<CD TV Dashboard.PNG>
 <img src="images/dashboard.png" alt="Screenshot of Power BI Dashboard" style="max-width:100%; height:auto;">
     </section>
     <footer>
